--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -14,14 +14,17 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@vercel/blob": "^0.24.0",
     "@vercel/postgres": "^0.10.0",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
     "lucide-react": "^0.446.0",
     "next": "14.2.13",
+    "radix-ui": "^1.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
