--- a/asset-processing-service/Dockerfile
+++ b/asset-processing-service/Dockerfile
@@ -2,7 +2,8 @@
 FROM python:3.9-slim
 
 # Update local system and Install ffmpeg
-RUN apt-get update && apt-get install -y ffmpeg 
+RUN apt-get update && apt-get install -y ffmpeg \
+    && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Set the working directory in the container
 WORKDIR /app
@@ -10,12 +11,13 @@ WORKDIR /app
 # Copy pyproject.toml and poetry.lock first for dependency caching
 COPY pyproject.toml poetry.lock* /app/
 
-# Install Poetry and dependencies
-RUN pip install poetry \
+# Install a specific version of Poetry and dependencies
+RUN pip install poetry==1.4.0 \
     && poetry install --no-root
 
 # Copy the entire project into the container
 COPY . /app
 
-# Run the service when the container launches
-CMD ["poetry", "run", "asset-processing-service"]
+# Define the entrypoint for the container and the default command
+ENTRYPOINT ["poetry", "run"]
+CMD ["asset-processing-service"]
